docs: 重构 README 与全套教程示例

--- a/docs/使用示例/08-图谱导出与可视化-示例.md
+++ b/docs/使用示例/08-图谱导出与可视化-示例.md
@@ -1,45 +1,65 @@
-# 08 · 图谱导出与可视化（Cytoscape JSON）
+# 示例 08 · 图谱导出与可视化
+
+## 目标
+
+- 将 SynapseDB 中的图数据导出为 NDJSON/Graphviz/Gephi 可用格式
+- 快速生成依赖关系图或团队关系图
+
+## 导出 NDJSON
+
+```bash
+synapsedb dump demo.synapsedb SPO 0 --output spo-0.ndjson
+```
+
+或使用脚本：
 
 ```ts
 import { SynapseDB } from 'synapsedb';
-import { writeFile } from 'node:fs/promises';
+import { createWriteStream } from 'node:fs';
 
-const db = await SynapseDB.open('graph.synapsedb');
+const db = await SynapseDB.open('demo.synapsedb');
+const out = createWriteStream('graph.ndjson');
 
-const seed = 'method:User#login';
-const steps = 2;
-
-const nodes = new Map<number, { data: { id: string; label: string } }>();
-const edges: Array<{ data: { id: string; source: string; target: string; label: string } }> = [];
-
-function ensureNode(id: number, label: string) {
-  if (!nodes.has(id)) nodes.set(id, { data: { id: String(id), label } });
+for await (const batch of db.streamFacts({}, 512)) {
+  for (const fact of batch) out.write(`${JSON.stringify(fact)}\n`);
 }
 
-function addEdge(s: number, pLabel: string, o: number) {
-  edges.push({
-    data: { id: `${s}-${pLabel}-${o}`, source: String(s), target: String(o), label: pLabel },
-  });
-}
-
-let frontier = db.find({ subject: seed }).all();
-for (let i = 0; i < steps; i += 1) {
-  const next: typeof frontier = [] as any;
-  for (const r of frontier) {
-    const fwd = db.find({ subject: r.object }).all();
-    for (const x of fwd) {
-      ensureNode(r.subjectId, r.subject);
-      ensureNode(x.objectId, x.object);
-      addEdge(r.subjectId, r.predicate, x.objectId);
-      (next as any).push(x);
-    }
-  }
-  frontier = next as any;
-}
-
-const cy = { elements: { nodes: [...nodes.values()], edges } };
-await writeFile('graph-cyto.json', JSON.stringify(cy, null, 2), 'utf8');
+out.end();
 await db.close();
 ```
 
-- 生成的 `graph-cyto.json` 可直接被 Cytoscape.js/很多在线演示加载
+## 转换为 Graphviz DOT
+
+```ts
+import { createWriteStream } from 'node:fs';
+import readline from 'node:readline';
+
+const input = readline.createInterface({ input: createReadStream('graph.ndjson') });
+const out = createWriteStream('graph.dot');
+out.write('digraph synapsedb {\n');
+
+for await (const line of input) {
+  const fact = JSON.parse(line);
+  out.write(`  "${fact.subject}" -> "${fact.object}" [label="${fact.predicate}"];\n`);
+}
+
+out.write('}\n');
+out.end();
+```
+
+执行 `dot -Tpng graph.dot -o graph.png`
+
+## 导入 Gephi / Cytoscape
+
+- 使用 `graph.ndjson` 作为 CSV/JSON 数据源，映射 `subject`/`object`/`predicate`
+- 节点属性可从 `subjectProperties` 中提取
+
+## 过滤示例
+
+- 只导出特定谓词：`db.streamFacts({ predicate: 'FRIEND_OF' }, 512)`
+- 根据属性筛选：`where()` 后再写出
+
+## 延伸阅读
+
+- [docs/使用示例/图算法库使用指南.md](图算法库使用指南.md)
+- [实战 · 代码知识图谱](../教学文档/实战-代码知识图谱.md)
