--- a/docs/使用示例/09-嵌入式脚本与自动化-示例.md
+++ b/docs/使用示例/09-嵌入式脚本与自动化-示例.md
@@ -1,29 +1,61 @@
-# 09 · 嵌入式脚本与自动化
+# 示例 09 · 嵌入式脚本与自动化
 
-> 将 CLI 操作纳入运维脚本（cron/CI），或以子进程方式调用。
+## 目标
+
+- 将 SynapseDB CLI 与脚本组合到 CI/CD、运维或 AI 自动化流程中
+- 展示嵌入式脚本执行模式与日志收集
+
+## Node.js 自动化脚本
 
 ```ts
-import { spawn } from 'node:child_process';
+// scripts/auto-compact.ts
+import { execa } from 'execa';
 
-function run(cmd: string, args: string[]) {
-  return new Promise<void>((resolve, reject) => {
-    const p = spawn(cmd, args, { stdio: 'inherit' });
-    p.on('exit', (code) => (code === 0 ? resolve() : reject(new Error(`exit ${code}`))));
-  });
-}
-
-await run('synapsedb', [
-  'auto-compact',
-  'prod.synapsedb',
-  '--mode=incremental',
-  '--orders=SPO',
-  '--min-merge=2',
-  '--hot-threshold=1',
-  '--max-primary=1',
-  '--auto-gc',
-]);
-
-await run('synapsedb', ['gc', 'prod.synapsedb']);
+await execa(
+  'synapsedb',
+  [
+    'auto-compact',
+    'demo.synapsedb',
+    '--mode=incremental',
+    '--hot-threshold=1.2',
+    '--max-primary=5',
+    '--auto-gc',
+  ],
+  { stdio: 'inherit' },
+);
 ```
 
-- 也可直接 import 维护模块进行更细粒度控制
+可配合 `cron` 执行：`0 * * * * node scripts/auto-compact.js`
+
+## CI 示例（GitHub Actions）
+
+```yaml
+jobs:
+  verify:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v3
+      - run: pnpm install
+      - run: pnpm typecheck && pnpm lint && pnpm test
+      - run: pnpm build
+      - run: |
+          synapsedb bench ci.synapsedb 200 lsm
+          synapsedb stats ci.synapsedb --summary
+```
+
+## AI 自动化
+
+- 在 MCP 环境下可直接调用 `repomix__pack_codebase` + `synapsedb` 脚本
+- 结合 `repomix` 输出，生成智能体可读的仓库上下文
+
+## 日志收集
+
+```bash
+synapsedb stats demo.synapsedb --json | tee -a /var/log/synapsedb/stats.log
+```
+
+## 延伸阅读
+
+- [docs/教学文档/教程-06-维护与治理.md](../教学文档/教程-06-维护与治理.md)
+- [docs/使用示例/00-全局CLI-快速开始.md](00-全局CLI-快速开始.md)
