--- a/docs/使用示例/99-常见问题与排错.md
+++ b/docs/使用示例/99-常见问题与排错.md
@@ -1,25 +1,61 @@
-# 99 · 常见问题与排错
+# 示例 99 · 常见问题与排错
 
-## ESM 导入失败 / ERR_MODULE_NOT_FOUND
+> 配合 [教程 09 · 常见问题与排错](../教学文档/教程-09-FAQ与排错.md)，提供命令级别的实操。
 
-- 你的项目需为 ESM（package.json: { "type": "module" }），或使用 tsx/ts-node ESM 运行器
+## 1. CLI 报 “manifest not found”
 
-## 全局装了 CLI，项目里 import 不到
+```bash
+synapsedb check demo.synapsedb --summary
+synapsedb repair demo.synapsedb --fast
+```
 
-- 全局安装只提供 CLI，作为库使用需将包安装到项目依赖（tgz/私有源）或使用 `npm link`
+## 2. auto-compact 总是跳过
 
-## 覆盖率阈值不通过
+```bash
+synapsedb readers demo.synapsedb
+# 结束对应查询或等待再执行
+```
 
-- 本仓库已限定覆盖率统计范围为 `src/**/*.ts`；自定义项目可调整 include/exclude
+## 3. 查询慢
 
-## 索引损坏/manifest 缺失
+```bash
+synapsedb stats demo.synapsedb --summary | jq '.orders.SPO.multiPagePrimaries'
+# 根据输出调整 auto-compact 或属性索引
+```
 
-- `synapsedb check <db> --strict` 定位问题；`synapsedb repair <db> --fast` 修复；必要时重建索引（`rebuildIndexes: true`）
+## 4. WAL 爆增
 
-## 并发写冲突
+```bash
+synapsedb stats demo.synapsedb --summary | jq '.walBytes'
+synapsedb auto-compact demo.synapsedb --auto-gc
+```
 
-- 生产建议 `enableLock: true`；读者不受写锁限制，建议 `registerReader: true`
+## 5. 属性查询无结果
 
-## 长链路查询中途“结果漂移”
+```bash
+synapsedb dump demo.synapsedb POS 123 | rg '"dept"'
+```
 
-- 使用 `withSnapshot(fn)` 固定 manifest epoch，避免 compact/GC 并发影响
+## 6. GraphQL 报错
+
+- 检查 `docs/使用示例/graphql_usage.md`
+- 使用 QueryBuilder 重现，确认语义
+
+## 7. 幂等失效
+
+```bash
+synapsedb txids demo.synapsedb --list=10
+# 确认 txId 是否重复；必要时重新生成
+```
+
+## 8. 备份恢复后异常
+
+```bash
+synapsedb check demo.synapsedb --strict
+synapsedb repair demo.synapsedb --rebuild-indexes
+```
+
+## 参考脚本
+
+- `docs/使用示例/09-嵌入式脚本与自动化-示例.md`
+- `scripts/` 目录中的诊断脚本
