--- a/docs/使用示例/全文搜索使用指南.md
+++ b/docs/使用示例/全文搜索使用指南.md
@@ -1,572 +1,81 @@
-# SynapseDB 全文搜索使用指南
+# 全文搜索使用指南
 
-## 概述
+## 目标
 
-SynapseDB 全文搜索引擎提供强大的文本检索功能，支持中英文分词、多种评分算法、布尔查询、模糊搜索和短语查询。
+- 使用 SynapseDB 内置全文模块构建倒排索引
+- 进行关键词检索、批量索引与监控
 
-## 核心组件
+## 引入与初始化
 
-### 1. 搜索引擎工厂
+```ts
+import { FulltextEngine } from 'synapsedb/fulltext';
 
-```typescript
-import { FullTextSearchFactory } from '@/fulltext/engine';
-
-// 创建搜索引擎实例
-const engine = FullTextSearchFactory.createEngine();
-
-// 创建默认配置
-const config = FullTextSearchFactory.createDefaultConfig(['title', 'content']);
-
-// 创建自定义配置
-const customConfig = FullTextSearchFactory.createConfig({
-  fields: ['title', 'content', 'tags'],
-  analyzer: {
-    language: 'mixed',
-    enableStemming: true,
-    enableNGrams: true,
-    nGramSize: { min: 2, max: 3 },
-  },
-  scorer: {
-    type: 'bm25',
-    k1: 1.2,
-    b: 0.75,
-  },
+const engine = await FulltextEngine.open('docs.synapsedb', {
+  tokenizer: 'default',
 });
 ```
 
-### 2. 文本分析器
+## 批量索引
 
-```typescript
-import { MultiLanguageAnalyzer } from '@/fulltext/analyzer';
-
-const analyzer = new MultiLanguageAnalyzer({
-  language: 'mixed', // 'chinese', 'english', 'mixed'
-  enableStemming: true,
-  enableNGrams: true,
-  nGramSize: { min: 2, max: 3 },
-});
-
-// 分析中文文本
-const chineseTokens = analyzer.analyze('人工智能技术快速发展');
-console.log('中文分词结果:', chineseTokens);
-
-// 分析英文文本
-const englishTokens = analyzer.analyze('Machine learning algorithms');
-console.log('英文分词结果:', englishTokens);
-
-// 分析混合文本
-const mixedTokens = analyzer.analyze('AI人工智能 machine learning');
-console.log('混合语言分词结果:', mixedTokens);
-```
-
-## 索引管理
-
-### 创建和配置索引
-
-```typescript
-import { FullTextSearchFactory } from '@/fulltext/engine';
-
-const engine = FullTextSearchFactory.createEngine();
-
-// 创建基础索引
-await engine.createIndex('documents', {
-  fields: ['title', 'content'],
-  analyzer: {
-    language: 'chinese',
-    enableStemming: true,
-    enableNGrams: false,
-  },
-  scorer: {
-    type: 'tfidf',
-  },
-});
-
-// 创建多字段索引
-await engine.createIndex('articles', {
-  fields: ['title', 'abstract', 'content', 'keywords'],
-  analyzer: {
-    language: 'mixed',
-    enableStemming: true,
-    enableNGrams: true,
-    nGramSize: { min: 2, max: 4 },
-  },
-  scorer: {
-    type: 'bm25',
-    k1: 1.2,
-    b: 0.75,
-  },
-});
-```
-
-### 文档索引
-
-```typescript
-// 索引单个文档
-await engine.indexDocument('documents', {
-  id: 'doc_001',
-  fields: new Map([
-    ['title', '深度学习在自然语言处理中的应用'],
-    [
-      'content',
-      '深度学习技术在自然语言处理领域取得了显著进展，特别是在文本分类、情感分析和机器翻译方面。',
-    ],
-    ['keywords', '深度学习,自然语言处理,文本分类'],
-  ]),
-  tokens: [],
-  timestamp: new Date(),
-});
-
-// 批量索引文档
-const documents = [
+```ts
+await engine.batchIndex([
   {
-    id: 'doc_002',
-    fields: new Map([
-      ['title', '机器学习算法比较研究'],
-      ['content', '本文比较了几种主流机器学习算法在不同数据集上的性能表现。'],
-    ]),
-    tokens: [],
-    timestamp: new Date(),
+    id: 'doc:architecture',
+    title: 'SynapseDB 架构指南',
+    body: '嵌入式知识库、WAL v2、链式联想、六序索引',
+    tags: ['architecture'],
   },
   {
-    id: 'doc_003',
-    fields: new Map([
-      ['title', '计算机视觉技术发展趋势'],
-      ['content', '计算机视觉技术在图像识别、目标检测和图像分割方面不断发展。'],
-    ]),
-    tokens: [],
-    timestamp: new Date(),
+    id: 'doc:faq',
+    title: '常见问题',
+    body: '如何处理 WAL、auto-compact、registerReader',
   },
-];
-
-for (const doc of documents) {
-  await engine.indexDocument('documents', doc);
-}
+]);
 ```
 
-## 搜索功能
+- 支持增量索引，重复 ID 会覆盖
+- `batchIndex` 返回处理结果与耗时
 
-### 基础搜索
+## 检索
 
-```typescript
-// 简单关键词搜索
-const results1 = await engine.search('documents', '深度学习', {
-  maxResults: 10,
-});
-
-console.log('搜索结果:', results1.documents);
-console.log('查询统计:', results1.stats);
-
-// 指定评分算法
-const results2 = await engine.search('documents', '机器学习', {
-  maxResults: 5,
-  scorer: 'bm25',
-});
-
-// 设置最小相关性阈值
-const results3 = await engine.search('documents', '自然语言', {
-  maxResults: 10,
-  minScore: 0.5,
+```ts
+const result = await engine.search({
+  keywords: ['链式', '索引'],
+  limit: 10,
+  filters: { tags: 'architecture' },
 });
 ```
 
-### 布尔查询
+- 返回命中文档 ID、分数、摘要
+- `filters` 可根据索引字段过滤
 
-```typescript
-// AND 操作
-const andResults = await engine.search('documents', '深度学习 AND 自然语言处理');
+## 删除文档
 
-// OR 操作
-const orResults = await engine.search('documents', '机器学习 OR 深度学习');
-
-// NOT 操作
-const notResults = await engine.search('documents', '人工智能 NOT 机器学习');
-
-// 复杂布尔查询
-const complexResults = await engine.search(
-  'documents',
-  '(深度学习 OR 机器学习) AND 自然语言处理 NOT 计算机视觉',
-);
+```ts
+await engine.remove('doc:faq');
 ```
 
-### 模糊搜索
+## 状态监控
 
-```typescript
-// 启用模糊搜索
-const fuzzyResults = await engine.search('documents', '深度*习', {
-  fuzzy: true,
-  maxResults: 10,
-});
-
-// 通配符搜索
-const wildcardResults = await engine.search('documents', '机器*算法', {
-  fuzzy: true,
-});
-
-// 设置模糊度
-const fuzzinessResults = await engine.search('documents', '深渡学习', {
-  fuzzy: true,
-  fuzziness: 2, // 允许2个字符的差异
-});
+```ts
+const stats = await engine.stats();
+console.log(stats.docCount, stats.indexSizeBytes);
 ```
 
-### 短语搜索
+## 与 SynapseDB 结合
 
-```typescript
-// 精确短语搜索
-const exactPhraseResults = await engine.search('documents', '"深度学习技术"', {
-  phraseSearch: true,
-});
+- 将文档 ID 作为三元组中的 subject/object，建立关系
+- 使用 QueryBuilder 与全文结果交叉过滤
 
-// 近似短语搜索（允许词语间有其他词）
-const proximityResults = await engine.search('documents', '"深度 学习"~5', {
-  phraseSearch: true,
-  slop: 5, // 允许词语间最多有5个其他词
-});
-```
+## 常见问题
 
-### 字段特定搜索
+| 现象       | 原因               | 解决                                |
+| ---------- | ------------------ | ----------------------------------- |
+| 命中率低   | 词形变化或拼写差异 | 扩展关键词、使用同义词字典          |
+| 索引体积大 | 文档多且正文长     | 使用 `removeComments` 或外部压缩    |
+| 搜索慢     | 未建立过滤字段     | 在索引用 JSON 字段提前存储标签/类型 |
 
-```typescript
-// 搜索特定字段
-const titleResults = await engine.search('documents', 'title:机器学习');
+## 延伸阅读
 
-const contentResults = await engine.search('documents', 'content:算法');
-
-// 组合字段搜索
-const combinedResults = await engine.search('documents', 'title:深度学习 AND content:自然语言');
-
-// 加权字段搜索
-const weightedResults = await engine.search('documents', '人工智能', {
-  fieldWeights: new Map([
-    ['title', 2.0], // 标题权重 x2
-    ['content', 1.0], // 内容正常权重
-    ['keywords', 3.0], // 关键词权重 x3
-  ]),
-});
-```
-
-## 高级搜索选项
-
-### 自定义评分
-
-```typescript
-// 使用 TF-IDF 评分
-const tfidfResults = await engine.search('documents', '深度学习', {
-  scorer: 'tfidf',
-  maxResults: 10,
-});
-
-// 使用 BM25 评分
-const bm25Results = await engine.search('documents', '深度学习', {
-  scorer: 'bm25',
-  scorerParams: {
-    k1: 1.2, // 术语频率饱和参数
-    b: 0.75, // 字段长度归一化参数
-  },
-  maxResults: 10,
-});
-
-// 自定义评分函数
-const customResults = await engine.search('documents', '深度学习', {
-  customScorer: (doc, queryTerms, stats) => {
-    // 实现自定义评分逻辑
-    const termFreq = queryTerms.reduce(
-      (sum, term) => sum + (doc.termFrequencies.get(term) || 0),
-      0,
-    );
-    const docLength = doc.totalTerms;
-    const avgDocLength = stats.averageDocumentLength;
-
-    return termFreq / (docLength / avgDocLength);
-  },
-});
-```
-
-### 结果过滤和排序
-
-```typescript
-// 按分数过滤
-const highScoreResults = await engine.search('documents', '机器学习', {
-  minScore: 0.8,
-  maxResults: 20,
-});
-
-// 按时间过滤（需要文档包含时间戳）
-const recentResults = await engine.search('documents', '人工智能', {
-  dateRange: {
-    from: new Date('2023-01-01'),
-    to: new Date('2024-12-31'),
-  },
-});
-
-// 自定义排序
-const customSortResults = await engine.search('documents', '深度学习', {
-  customSort: (a, b) => {
-    // 首先按分数排序，然后按时间排序
-    if (Math.abs(a.score - b.score) < 0.01) {
-      return b.timestamp.getTime() - a.timestamp.getTime();
-    }
-    return b.score - a.score;
-  },
-});
-```
-
-## 性能优化
-
-### 索引优化
-
-```typescript
-// 批量索引优化
-const batchSize = 1000;
-const documents = [...]; // 大量文档
-
-for (let i = 0; i < documents.length; i += batchSize) {
-  const batch = documents.slice(i, i + batchSize);
-
-  await engine.batchIndexDocuments('documents', batch, {
-    skipAnalysis: false,  // 是否跳过文本分析
-    updateMode: 'merge'   // 'replace', 'merge', 'append'
-  });
-
-  // 定期压缩索引
-  if (i > 0 && i % (batchSize * 10) === 0) {
-    await engine.optimizeIndex('documents');
-  }
-}
-```
-
-### 查询优化
-
-```typescript
-// 使用查询缓存
-const cachedResults = await engine.search('documents', '深度学习', {
-  useCache: true,
-  cacheTimeout: 300000, // 5分钟缓存
-});
-
-// 预加载常用查询
-await engine.warmupQueries(['深度学习', '机器学习', '人工智能', '自然语言处理']);
-
-// 并发查询
-const queries = ['深度学习', '机器学习', '计算机视觉'];
-const concurrentResults = await Promise.all(
-  queries.map((query) => engine.search('documents', query, { maxResults: 5 })),
-);
-```
-
-### 内存管理
-
-```typescript
-// 设置索引内存限制
-await engine.setIndexMemoryLimit('documents', 500 * 1024 * 1024); // 500MB
-
-// 定期清理内存
-setInterval(async () => {
-  await engine.cleanupMemory('documents', {
-    compactThreshold: 0.3, // 当碎片超过30%时压缩
-    maxUnusedTime: 3600000, // 清理1小时未使用的数据
-  });
-}, 300000); // 每5分钟检查一次
-```
-
-## 监控和统计
-
-### 搜索统计
-
-```typescript
-// 获取索引统计信息
-const indexStats = await engine.getIndexStats('documents');
-console.log('索引统计:', {
-  documentCount: indexStats.documentCount,
-  termCount: indexStats.termCount,
-  indexSize: indexStats.indexSize,
-  averageDocumentLength: indexStats.averageDocumentLength,
-});
-
-// 获取查询性能统计
-const queryStats = await engine.getQueryStats('documents');
-console.log('查询统计:', {
-  totalQueries: queryStats.totalQueries,
-  averageQueryTime: queryStats.averageQueryTime,
-  slowQueries: queryStats.slowQueries,
-  cacheHitRate: queryStats.cacheHitRate,
-});
-```
-
-### 性能监控
-
-```typescript
-// 监听搜索事件
-engine.on('search', (event) => {
-  console.log(`查询: ${event.query}, 耗时: ${event.duration}ms, 结果数: ${event.resultCount}`);
-});
-
-engine.on('index', (event) => {
-  console.log(`索引文档: ${event.documentId}, 耗时: ${event.duration}ms`);
-});
-
-// 设置性能阈值报警
-engine.on('slowQuery', (event) => {
-  console.warn(`慢查询警告: ${event.query} 耗时 ${event.duration}ms`);
-});
-```
-
-## 与 SynapseDB 集成
-
-### 扩展 SynapseDB
-
-```typescript
-import { SynapseDB } from '@/synapseDb';
-import { FullTextSearchExtension } from '@/fulltext/synapsedbExtension';
-
-// 创建带全文搜索的数据库
-const db = await SynapseDB.open('knowledge.synapsedb', {
-  extensions: [new FullTextSearchExtension()],
-});
-
-// 启用全文搜索的事实添加
-db.addFact(
-  {
-    subject: 'article:123',
-    predicate: 'hasTitle',
-    object: '人工智能在医疗领域的应用',
-  },
-  {
-    fullTextSearch: {
-      enabled: true,
-      fields: ['object'],
-    },
-  },
-);
-
-// 全文搜索查询事实
-const facts = await db.searchFacts('人工智能', {
-  fields: ['object'],
-  maxResults: 10,
-  scorer: 'bm25',
-});
-
-// 组合图查询和全文搜索
-const results = db
-  .find({ predicate: 'hasTitle' })
-  .fullTextSearch('医疗', {
-    fields: ['object'],
-    minScore: 0.5,
-  })
-  .limit(20)
-  .all();
-```
-
-## 最佳实践
-
-### 1. 索引设计
-
-```typescript
-// 为不同类型的内容设计专门的索引
-await engine.createIndex('news', {
-  fields: ['title', 'summary', 'content'],
-  analyzer: {
-    language: 'chinese',
-    enableNGrams: true,
-    nGramSize: { min: 2, max: 3 },
-  },
-});
-
-await engine.createIndex('papers', {
-  fields: ['title', 'abstract', 'keywords'],
-  analyzer: {
-    language: 'mixed',
-    enableStemming: true,
-    enableNGrams: false,
-  },
-});
-```
-
-### 2. 查询优化
-
-```typescript
-// 使用适当的查询类型
-function smartSearch(query: string, options = {}) {
-  // 短查询使用精确匹配
-  if (query.length < 6) {
-    return engine.search('documents', query, {
-      phraseSearch: true,
-      ...options,
-    });
-  }
-
-  // 长查询使用布尔搜索
-  if (query.includes(' ')) {
-    return engine.search('documents', query, {
-      fuzzy: true,
-      ...options,
-    });
-  }
-
-  // 单词查询
-  return engine.search('documents', query, {
-    scorer: 'bm25',
-    ...options,
-  });
-}
-```
-
-### 3. 错误处理
-
-```typescript
-async function safeSearch(indexName: string, query: string) {
-  try {
-    const results = await engine.search(indexName, query);
-    return { success: true, data: results };
-  } catch (error) {
-    if (error.code === 'INDEX_NOT_FOUND') {
-      return { success: false, error: '索引不存在' };
-    } else if (error.code === 'INVALID_QUERY') {
-      return { success: false, error: '查询语法错误' };
-    } else {
-      console.error('搜索错误:', error);
-      return { success: false, error: '搜索服务暂时不可用' };
-    }
-  }
-}
-```
-
-## 故障排除
-
-### 常见问题
-
-1. **搜索结果为空**
-   - 检查索引是否存在
-   - 验证文档是否正确索引
-   - 确认查询语法正确
-
-2. **搜索性能慢**
-   - 检查索引大小和内存使用
-   - 优化查询条件
-   - 考虑使用缓存
-
-3. **分词结果不准确**
-   - 调整分析器配置
-   - 检查语言设置
-   - 考虑使用自定义词典
-
-### 调试技巧
-
-```typescript
-// 启用调试模式
-const engine = FullTextSearchFactory.createEngine({
-  debug: true,
-  logLevel: 'verbose',
-});
-
-// 分析查询执行
-const debugResults = await engine.search('documents', '深度学习', {
-  debug: true,
-  explain: true, // 返回评分详细信息
-});
-
-console.log('查询执行计划:', debugResults.explanation);
-console.log('评分详情:', debugResults.scoreDetails);
-```
-
-通过这个详细的指南，你可以充分利用 SynapseDB 的全文搜索功能，构建强大的文本检索应用。
+- [docs/教学文档/教程-05-索引选择与性能.md](../教学文档/教程-05-索引选择与性能.md)
+- [docs/使用示例/图算法库使用指南.md](图算法库使用指南.md)
