--- a/docs/教学文档/教程-06-维护与治理.md
+++ b/docs/教学文档/教程-06-维护与治理.md
@@ -1,49 +1,107 @@
-# 教程 06 · 维护与治理（Auto-Compact / GC / Repair / Stats）
+# 教程 06 · 维护与治理
 
-## 总览
+## 目标
 
-SynapseDB 将数据与索引分离，并提供成套的治理工具：
+- 掌握日常巡检、压实、GC、修复的操作组合
+- 理解读者尊重策略与事务观测工具
+- 构建可自动化的治理流程
 
-- 统计：`synapsedb stats <db>`（triples/epoch/pages/tombstones/walBytes/txIds/lsm/hotness）
-- 自动合并：`synapsedb auto-compact <db> [...options]`（支持 dry-run）
-- 页面级 GC：`synapsedb gc <db> [--no-respect-readers]`
-- 修复/自检：`synapsedb check|repair <db> [--strict|--fast]`
-- 热点：`synapsedb hot <db> [--order=SPO] [--top=10]`
-- 导出：`synapsedb dump <db> <order> <primary>`
+## 前置要求
 
-## Auto-Compact（增量 / 重写）
+- 熟悉 CLI 命令与索引机制
 
-示例：仅对 `SPO` 顺序，阈值=2，热度阈值=1，仅 Top1，并自动 GC：
+## 日常巡检
+
+```bash
+synapsedb stats demo.synapsedb --summary
+synapsedb hot demo.synapsedb --top=10
+```
+
+输出重点：
+
+- `triples`、`tombstones`：数据量与墓碑比
+- `orders.*.multiPagePrimaries`：哪些主键跨多页
+- `hotness.top`：热点主键
+- `walBytes`：WAL 大小
+
+## 自动压实
 
 ```bash
 synapsedb auto-compact demo.synapsedb \
-  --mode=incremental --orders=SPO --min-merge=2 --hot-threshold=1 --max-primary=1 --auto-gc
+  --mode=incremental \
+  --orders=SPO,POS \
+  --min-merge=2 \
+  --hot-threshold=1.1 \
+  --max-primary=5 \
+  --auto-gc
 ```
 
-选项要点：
+- 根据热度、页数、墓碑比例决定增量或 rewrite
+- 自动执行 GC，清理孤页
+- 遇到活跃读者会跳过，日志中有提示
 
-- `--mode=incremental|rewrite`
-- `--orders=SPO,POS,...`
-- `--min-merge=N`：某主键拥有多页达到 N 时入选
-- `--tombstone-threshold=R`：墓碑占比阈值
-- `--hot-threshold=H --max-primary=K`：热度驱动 + TopK 限制
-- `--includeLsmSegments[Auto]`：满足阈值自动并入 LSM 段
-- `--dry-run`：仅输出决策不落盘
+## 手动压实与 GC
 
-## GC（页面级）
+```bash
+synapsedb compact demo.synapsedb --orders=SPO --page-size=1024 --compression=brotli:4
+synapsedb gc demo.synapsedb --respect-readers
+```
 
-- 清理增量重写后不再被引用的 `orphans`
-- 建议在有读者时启用尊重策略（默认尊重）：避免中断长查询
+- rewrite 模式适合冷数据全量压缩
+- `--respect-readers` 确保读者安全；必要时可关闭（风险高）
 
-## Repair（修复）
+## 修复与诊断
 
-- `check --strict` 定位损坏页/顺序
-- `repair --fast`：按页快速修复，仅替换坏页映射
-- 按序重写：针对坏顺序全量重建页文件
-- 无损坏则全量重建（保留 tombstones）
+```bash
+synapsedb check demo.synapsedb --strict
+synapsedb repair demo.synapsedb --fast
+synapsedb repair-page demo.synapsedb SPO 123
+```
 
-## Stats / Hotness / Readers
+- `check --strict`：校验索引完整性、manifest、WAL 尾部
+- `repair --fast`：按页快速修复；若失败会尝试整库 rebuild
+- `repair-page`：针对单个 primary 重建索引页
 
-- `stats` 输出 epoch/页/墓碑/WAL/txIds/lsm 等
-- `hot` 输出每个顺序下 primary 热度 TopN
-- `readers.json`：跨进程读者登记，Auto-Compact/GC 可尊重读者跳过
+## 事务观测
+
+```bash
+synapsedb txids demo.synapsedb --list=20
+synapsedb txids demo.synapsedb --since=60
+synapsedb txids demo.synapsedb --session=ingest-service
+```
+
+- 查看最近事务、按时间过滤、按 session 聚合
+- `--clear` 可清空注册表（需确保幂等不受影响）
+
+## 推荐治理流程
+
+1. 每日：`stats --summary`、`hot --top=10`
+2. 每周：`auto-compact` + `gc`
+3. 每月：`compact --mode=rewrite`（冷数据）
+4. 变更或故障后：`check --strict`、`repair`
+5. 自动化：以 cron 或 CI 执行上述流程，并记录日志
+
+## 脚本化样例
+
+```bash
+#!/usr/bin/env bash
+set -euo pipefail
+DB=$1
+synapsedb stats "$DB" --summary > logs/$(date +%F)-stats.log
+synapsedb auto-compact "$DB" --mode=incremental --hot-threshold=1.2 --auto-gc
+synapsedb txids "$DB" --since=1440 > logs/$(date +%F)-txids.log
+```
+
+## 常见问题
+
+| 场景                    | 原因                   | 解决                                            |
+| ----------------------- | ---------------------- | ----------------------------------------------- |
+| auto-compact 提示有读者 | 存在活跃快照           | 等待读者结束，或排查长时间查询                  |
+| repair 失败             | 索引严重损坏或权限限制 | 手动备份后执行 `--rebuildIndexes`，检查文件权限 |
+| stats 输出为空          | 路径错误或文件损坏     | 确认数据库路径，执行 `synapsedb check`          |
+
+## 延伸阅读
+
+- [docs/使用示例/05-维护治理-示例.md](../使用示例/05-维护治理-示例.md)
+- [docs/使用示例/09-嵌入式脚本与自动化-示例.md](../使用示例/09-嵌入式脚本与自动化-示例.md)
+- [教程 07 · 存储格式与持久化](教程-07-存储格式与持久化.md)
