--- a/docs/使用示例/03-查询与联想-示例.md
+++ b/docs/使用示例/03-查询与联想-示例.md
@@ -1,36 +1,116 @@
-# 03 · 查询与联想（基础/链式）
+# 示例 03 · 查询与联想
 
-```ts
-import { SynapseDB } from 'synapsedb';
+## 目标
 
-const db = await SynapseDB.open('graph.synapsedb', { enableLock: true });
+- 演示 QueryBuilder 多跳联想、属性过滤、Streaming 与聚合
+- 覆盖正向、反向、变长路径查询
 
-db.addFact({ subject: 'Alice', predicate: 'KNOWS', object: 'Bob' });
-db.addFact({ subject: 'Bob', predicate: 'KNOWS', object: 'Carol' });
-await db.flush();
+## 数据准备
 
-// 点查
-const knows = db.find({ predicate: 'KNOWS' }).all();
-
-// 链式联想：Alice 的朋友的朋友
-const fof = db.find({ subject: 'Alice', predicate: 'KNOWS' }).follow('KNOWS').all();
-
-// 反向联想：谁认识 Bob
-const who = db.find({ object: 'Bob' }).followReverse('KNOWS').all();
-
-// 过滤与限制
-const heavy = db
-  .find({ predicate: 'KNOWS' })
-  .where((edge) => (edge.edgeProperties?.weight as number) > 10)
-  .limit(10)
-  .all();
-
-console.log({ knows, fof, who, heavy });
-await db.close();
+```bash
+synapsedb bench social.synapsedb 300 lsm
 ```
 
-要点
+主要关系：`FRIEND_OF`、`WORKS_AT`、`LOCATED_IN`、`USES_TOOL`
 
-- `find({ s/p/o })`：任意组合
-- `follow / followReverse`：链式联想
-- `where / limit`：结果过滤与限制
+## 1. 正向联想
+
+```ts
+const connection = await db
+  .find({ subject: 'user:alice', predicate: 'FRIEND_OF' })
+  .follow('FRIEND_OF')
+  .follow('USES_TOOL')
+  .limit(10)
+  .all();
+```
+
+## 2. 反向溯源
+
+```ts
+const managers = await db
+  .find({ object: 'team:platform' }, { anchor: 'subject' })
+  .followReverse('WORKS_AT')
+  .follow('OWNS_PROJECT')
+  .all();
+```
+
+## 3. 属性过滤
+
+```ts
+const strong = await db
+  .find({ predicate: 'FRIEND_OF' })
+  .where((edge) => (edge.edgeProperties?.strength as number) >= 0.75)
+  .limit(5)
+  .all();
+```
+
+## 4. Streaming 处理
+
+```ts
+for await (const batch of db.streamFacts({ predicate: 'FRIEND_OF' }, 200)) {
+  console.log('batch size', batch.length);
+}
+```
+
+## 5. 变长路径 + 最短路径
+
+```ts
+const path = await db
+  .find({ subject: 'user:alice', predicate: 'FRIEND_OF' })
+  .variable({ predicate: 'FRIEND_OF', min: 1, max: 4 })
+  .to('user:erin')
+  .shortestPath({ weight: (edge) => edge.edgeProperties?.strength as number });
+```
+
+## 6. 聚合分析
+
+```ts
+const clusters = await db
+  .aggregate()
+  .match({ predicate: 'WORKS_AT' })
+  .groupBy(['object'])
+  .count('memberCount')
+  .avg('avgStrength', (edge) => edge.edgeProperties?.strength as number)
+  .orderBy((group) => group.count('memberCount'), 'desc')
+  .limit(5)
+  .execute();
+```
+
+## 7. GraphQL / Gremlin 对比
+
+```graphql
+query ToolUsers {
+  synapse {
+    find(predicate: "USES_TOOL", object: "tool:GraphQL") {
+      subject
+      follow(predicate: "WORKS_AT") {
+        object
+      }
+    }
+  }
+}
+```
+
+```javascript
+g.V('user:alice').repeat(out('FRIEND_OF')).times(2).values('dept');
+```
+
+## 8. 快照一致性
+
+```ts
+const snapshot = await db.withSnapshot(async (snap) =>
+  snap.find({ predicate: 'WORKS_AT' }).followReverse('MANAGES').all(),
+);
+```
+
+## 小结
+
+- QueryBuilder 适合灵活的链式分析
+- Streaming 适合大批量数据处理
+- 变长路径与聚合结合可快速定位核心节点
+
+## 延伸阅读
+
+- [教程 03 · 查询与链式联想](../教学文档/教程-03-查询与链式联想.md)
+- [示例 06 · 流式查询与大结果](06-流式查询与大结果-示例.md)
+- [示例 08 · 图谱导出与可视化](08-图谱导出与可视化-示例.md)
