--- a/docs/使用示例/04-事务与幂等-示例.md
+++ b/docs/使用示例/04-事务与幂等-示例.md
@@ -1,33 +1,61 @@
-# 04 · 事务与幂等（批次/耐久）
+# 示例 04 · 事务与幂等
+
+## 目标
+
+- 展示批次写入、事务 ID 幂等、崩溃恢复流程
+- 结合 CLI 检查 `txids.json`
+
+## 步骤
+
+### 1. 写入批次
 
 ```ts
-import { SynapseDB } from 'synapsedb';
-
-const db = await SynapseDB.open('tx.synapsedb', {
+const db = await SynapseDB.open('orders.synapsedb', {
   enableLock: true,
-  // 按需开启跨周期幂等（可选）
   enablePersistentTxDedupe: true,
-  maxRememberTxIds: 2000,
 });
 
-// 幂等写入：以订单号作为 txId
-const txId = 'ORDER-2025-0001';
-db.beginBatch({ txId, sessionId: 'svc-a' });
-try {
-  db.addFact({ subject: 'user:1001', predicate: 'ORDERED', object: 'order:2025-0001' });
-  db.addFact({ subject: 'order:2025-0001', predicate: 'CONTAINS', object: 'product:SKU-1' });
-  db.commitBatch({ durable: true }); // 更强持久保障
-} catch (e) {
-  db.abortBatch();
-  throw e;
-}
-
+db.beginBatch({ txId: 'order-1001', sessionId: 'order-service' });
+await db.addFact({ subject: 'order:1001', predicate: 'PLACED_BY', object: 'user:alice' });
+await db.addFact({ subject: 'order:1001', predicate: 'CONTAINS', object: 'sku:keyboard' });
+db.commitBatch({ durable: true });
 await db.flush();
 await db.close();
 ```
 
-要点
+### 2. 重复提交（模拟重试）
 
-- `beginBatch/commitBatch/abortBatch`：同一批次原子提交
-- `durable: true`：提交即 fsync 落盘
-- 幂等：开启 `enablePersistentTxDedupe` + 为重试使用相同 txId
+再次执行上述代码。输出日志显示 `Skipped duplicate txId=order-1001`
+
+### 3. 查看事务注册表
+
+```bash
+synapsedb txids orders.synapsedb --list=10
+```
+
+### 4. 崩溃恢复演练
+
+1. 在 `commitBatch` 前故意抛错并 `abortBatch`，观察 WAL 中只有 BEGIN/ABORT
+2. 手动复制数据库文件，删除 `orders.synapsedb.wal`
+3. 恢复后执行 `synapsedb stats`，数据完整
+
+### 5. 清空事务注册表（谨慎）
+
+```bash
+synapsedb txids orders.synapsedb --clear
+```
+
+> 清空后同一 `txId` 可能再次生效，请确保业务可接受。
+
+## 常见问题
+
+| 情况         | 解决                                                      |
+| ------------ | --------------------------------------------------------- |
+| 批次未提交   | 确认 `commitBatch` 在 `try` 块中调用，出错后 `abortBatch` |
+| 事务 ID 冲突 | 使用不同 `sessionId` 区分来源、避免业务级重复             |
+| WAL 文件大   | 定期 `db.flush()` 结合 `auto-compact`                     |
+
+## 延伸阅读
+
+- [教程 04 · 事务、WAL 与幂等](../教学文档/教程-04-事务-WAL-幂等.md)
+- [示例 07 · 快照一致性与并发](07-快照一致性与并发-示例.md)
