--- a/docs/使用示例/05-维护治理-示例.md
+++ b/docs/使用示例/05-维护治理-示例.md
@@ -1,24 +1,46 @@
-# 05 · 维护治理（compact/gc/repair）
+# 示例 05 · 维护与治理
 
-## CLI 模式（推荐）
+## 目标
+
+- 建立日常巡检、压实、GC、修复的脚本化流程
+- 演示如何将 CLI 输出写入日志并分析
+
+## 核心脚本
 
 ```bash
-# 自检
-synapsedb check demo.synapsedb --summary
-synapsedb check demo.synapsedb --strict
+#!/usr/bin/env bash
+set -euo pipefail
+DB=$1
+LOG_DIR=/var/log/synapsedb
+mkdir -p "$LOG_DIR"
 
-# 自动合并（增量）+ 自动 GC（SPO、阈值=2，热度阈值=1，仅 Top1）
-synapsedb auto-compact demo.synapsedb \
-  --mode=incremental --orders=SPO --min-merge=2 \
-  --hot-threshold=1 --max-primary=1 --auto-gc
-
-# 页面级 GC
-synapsedb gc demo.synapsedb
-
-# 快速修复
-synapsedb repair demo.synapsedb --fast
+synapsedb stats "$DB" --summary --json > "$LOG_DIR/$(date +%F)-stats.json"
+synapsedb auto-compact "$DB" --mode=incremental --hot-threshold=1.1 --max-primary=5 --auto-gc
+synapsedb txids "$DB" --since=60 --json > "$LOG_DIR/$(date +%F)-txids.json"
 ```
 
-## 代码模式（可内嵌到服务）
+## 关键命令
 
-> 也可直接 import 维护 API（详见源码 maintenance/\*）或封装子进程执行 CLI。
+```bash
+synapsedb check demo.synapsedb --strict
+synapsedb repair demo.synapsedb --fast
+synapsedb hot demo.synapsedb --top=10
+synapsedb gc demo.synapsedb --respect-readers
+```
+
+## 日志解析
+
+```bash
+jq '.orders.SPO.multiPagePrimaries' logs/2025-09-28-stats.json
+```
+
+## 自动化建议
+
+- 使用 `cron` 每小时执行 auto-compact
+- 使用 `systemd` timer 保证重启后仍能运行
+- 将 JSON 日志推送到 ELK / Loki 统一分析
+
+## 延伸阅读
+
+- [教程 06 · 维护与治理](../教学文档/教程-06-维护与治理.md)
+- [示例 09 · 嵌入式脚本与自动化](09-嵌入式脚本与自动化-示例.md)
