--- a/docs/使用示例/06-流式查询与大结果-示例.md
+++ b/docs/使用示例/06-流式查询与大结果-示例.md
@@ -1,20 +1,68 @@
-# 06 · 流式查询与大结果
+# 示例 06 · 流式查询与大结果
 
-```ts
-import { SynapseDB } from 'synapsedb';
+## 目标
 
-const db = await SynapseDB.open('big.synapsedb');
+- 处理百万级别事实的查询结果
+- 展示 Streaming、批处理与 backpressure 控制
 
-// 批次 1000 条返回（避免一次性加载大结果集）
-for await (const batch of db.streamFacts({ predicate: 'KNOWS' }, 1000)) {
-  // 逐批处理
-  console.log('got', batch.length);
-}
+## 数据准备
 
-await db.close();
+```bash
+synapsedb bench large.synapsedb 10000 lsm
 ```
 
-要点
+## Streaming 示例
 
-- `streamFacts(criteria, batchSize)`：按批异步生成器
-- 结合 SSE/WebSocket 可渐进下发到前端
+```ts
+const iterator = db.streamFacts({ predicate: 'FRIEND_OF' }, 500);
+for await (const batch of iterator) {
+  // 在这里处理批次，例如写入文件或推送到队列
+  console.log('batch length', batch.length);
+}
+```
+
+## 链式 Streaming
+
+```ts
+const stream = db
+  .find({ predicate: 'FRIEND_OF' })
+  .where((edge) => (edge.edgeProperties?.strength as number) > 0.6)
+  .stream({ batchSize: 256 });
+
+for await (const edges of stream) {
+  // 业务处理
+}
+```
+
+## 控制 backpressure
+
+- 减小 `batchSize`
+- 将处理逻辑改为异步队列
+- 使用 `setImmediate` 或消息队列分发
+
+## 导出为 NDJSON
+
+```ts
+import { createWriteStream } from 'node:fs';
+const out = createWriteStream('friends.ndjson');
+
+for await (const batch of db.streamFacts({ predicate: 'FRIEND_OF' }, 256)) {
+  for (const fact of batch) {
+    out.write(`${JSON.stringify(fact)}\n`);
+  }
+}
+out.end();
+```
+
+## 常见问题
+
+| 现象     | 原因               | 解决                           |
+| -------- | ------------------ | ------------------------------ |
+| 内存上涨 | 批次过大或同步处理 | 减小 batchSize、异步落盘       |
+| 速度慢   | I/O 瓶颈           | 使用并行写入、拆分多个 stream  |
+| 查询中断 | 后台治理打断       | 在命令执行前完成治理或使用快照 |
+
+## 延伸阅读
+
+- [教程 03 · 查询与链式联想](../教学文档/教程-03-查询与链式联想.md)
+- [docs/使用示例/流式查询使用教程.md](流式查询使用教程.md)
