--- a/docs/使用示例/路径与最短路径.md
+++ b/docs/使用示例/路径与最短路径.md
@@ -1,37 +1,84 @@
-# 变长路径与最短路径
+# 路径与最短路径指南
 
-本文展示如何使用 `followPath` 与最短路径 API。
+## 目标
 
-## 变长路径（[*min..max]）
+- 使用变长路径、最短路径算法（Dijkstra/A\*/双向 BFS）
+- 结合权重字段优化路径选择
 
-```ts
-// A->B->C->D
-db.addFact({ subject: 'A', predicate: 'LINK', object: 'B' });
-db.addFact({ subject: 'B', predicate: 'LINK', object: 'C' });
-db.addFact({ subject: 'C', predicate: 'LINK', object: 'D' });
-await db.flush();
-
-const edges = db.find({ subject: 'A' }).followPath('LINK', { min: 2, max: 3 }).all();
-// 返回第2~3跳的终止边集合
-```
-
-## 最短路径（无权，BFS）
+## 基本用法
 
 ```ts
-const path = db.shortestPath('A', 'D', { predicates: ['LINK'] });
+const shortest = await db
+  .find({ subject: 'user:alice', predicate: 'FRIEND_OF' })
+  .variable({ predicate: 'FRIEND_OF', min: 1, max: 4 })
+  .to('user:zoe')
+  .shortestPath();
 ```
 
-## 最短路径（双向 BFS）
+## 指定权重
 
 ```ts
-const bidir = db.shortestPathBidirectional('A', 'D', { predicates: ['LINK'] });
+const path = await db
+  .find({ subject: 'user:alice', predicate: 'FRIEND_OF' })
+  .variable({ predicate: 'FRIEND_OF', min: 1, max: 6 })
+  .to('user:zoe')
+  .shortestPath({ weight: (edge) => 1 / (edge.edgeProperties?.strength ?? 0.1) });
 ```
 
-## 加权最短路径（Dijkstra）
+- 权重越小越优；上例代表越强的关系越优先
+
+## A\* 搜索
 
 ```ts
-// 权重取自边属性，如 { edgeProperties: { weight: 2 } }
-const w = db.shortestPathWeighted('S', 'T', { predicate: 'R', weightProperty: 'weight' });
+const coords = new Map([
+  ['user:alice', [121.5, 31.2]],
+  ['user:zoe', [121.7, 31.3]],
+]);
+
+const path = await db
+  .find({ subject: 'user:alice', predicate: 'FRIEND_OF' })
+  .variable({ predicate: 'FRIEND_OF', min: 1, max: 6 })
+  .to('user:zoe')
+  .shortestPath({
+    heuristic: (node) => {
+      const [lng, lat] = coords.get(node.subject) ?? [0, 0];
+      const [targetLng, targetLat] = coords.get('user:zoe') ?? [0, 0];
+      return Math.hypot(lng - targetLng, lat - targetLat);
+    },
+  });
 ```
 
-提示：变长路径默认 NODE 唯一性；可通过 `variablePath('REL', { min, max, uniqueness: 'EDGE'|'NONE' })` 调整策略。
+## 双向 BFS
+
+- 对于无权图最短路径，可启用双向搜索：
+
+```ts
+const path = await db
+  .find({ subject: 'user:alice', predicate: 'FRIEND_OF' })
+  .variable({ predicate: 'FRIEND_OF', min: 1, max: 4 })
+  .to('user:bob')
+  .shortestPath({ strategy: 'bidirectional' });
+```
+
+## 所有路径
+
+```ts
+const all = await db
+  .find({ subject: 'user:alice', predicate: 'FRIEND_OF' })
+  .variable({ predicate: 'FRIEND_OF', min: 1, max: 3 })
+  .to('user:eva')
+  .allPaths({ limit: 10 });
+```
+
+## 常见问题
+
+| 现象       | 原因              | 解决                               |
+| ---------- | ----------------- | ---------------------------------- |
+| 找不到路径 | 无连接或 max 太小 | 提高 `max` 或拓宽谓词集合          |
+| 性能慢     | 搜索范围过大      | 调整权重、启用 heuristic、缩小范围 |
+| 路径重复   | 图存在环          | 使用 `takeUntil` 或 `distinct()`   |
+
+## 延伸阅读
+
+- [示例 03 · 查询与联想](03-查询与联想-示例.md)
+- [图算法库使用指南](图算法库使用指南.md)
