--- a/docs/教学文档/教程-00-概览.md
+++ b/docs/教学文档/教程-00-概览.md
@@ -1,37 +1,66 @@
-# SynapseDB 使用教程 · 概览
+# 教程 00 · 全局概览
 
-本教程面向初次接触与准备在生产/工程中使用 SynapseDB 的开发者，系统化介绍从安装、基本用法、查询模型与联想、事务与幂等、索引与性能优化、维护治理、存储格式、部署与最佳实践到常见问题的完整路径。你可以像学习 MySQL 一样循序渐进阅读与实践。
+## 目标
 
-## SynapseDB 是什么
+- 了解 SynapseDB 的定位、核心能力与适用场景
+- 熟悉教程系列的结构、示例数据集与实践方式
+- 准备后续学习所需的环境与基础知识
 
-SynapseDB 是一个嵌入式“三元组（SPO）知识库”，以 TypeScript/Node.js 实现，强调以下特性：
+## 读者画像
 
-- 单文件主数据 + 分页索引：`<name>.synapsedb` + `<name>.synapsedb.pages/`
-- 六序索引与分页化磁盘结构：SPO/SOP/POS/PSO/OSP/OPS
-- WAL v2 事务日志：BEGIN/COMMIT/ABORT、崩溃恢复与尾部安全截断
-- 读快照一致性：查询链路期间固定 manifest（epoch-pin）
-- 热度统计与半衰：`hotness.json` 用于热点主键分析与自动合并
-- 读者注册：`readers.json` 用于维护任务在有读者时按策略跳过
-- LSM-Lite 暂存（实验）：写入旁路段可按需并入索引
-- 事务幂等（实验）：可选 txId/sessionId，支持跨周期去重
-- 进程级写锁（可选）：同一路径单写者，读者不受影响
-- CLI 工具链：检查/修复/压缩/GC/导出/热点/事务观测
+- 有 Node.js/TypeScript 基础的开发者
+- 具备图数据或知识库需求的架构师 / 数据工程师
+- 准备在本地或边缘环境部署嵌入式知识库的团队
 
-## 适用场景
+## SynapseDB 一句话
 
-- 代码知识与关系图谱（文件-符号-关系）
-- 轻量本地知识库/嵌入式推理
-- 快速实验或边缘部署（无需独立数据库服务）
+> 嵌入式三元组（SPO）知识库：单文件主库 + 分页索引，支持 WAL v2、链式联想、多查询语言、属性/全文/空间索引与自动化治理。
 
-## 学习路径
+## 教程地图
 
-1. 安装与环境（教程-01）
-2. 数据模型与基础 CRUD（教程-02）
-3. 查询与链式联想（教程-03）
-4. 事务、WAL 与幂等（教程-04）
-5. 索引选择与性能优化（教程-05）
-6. 维护与治理（教程-06）
-7. 存储格式与持久化（教程-07）
-8. 部署与最佳实践（教程-08）
-9. 常见问题与排错（教程-09）
-10. 附录：CLI 参考 / API 参考 / 示例代码
+| 序号   | 名称                | 重点                            | 必修 | 推荐先修 |
+| ------ | ------------------- | ------------------------------- | ---- | -------- |
+| 01     | 安装与环境          | Node/Pnpm/CLI 安装、示例库生成  | ✅   | 无       |
+| 02     | 数据模型与基础 CRUD | 三元组、属性、批次、flush       | ✅   | 01       |
+| 03     | 查询与链式联想      | QueryBuilder、anchor、Streaming | ✅   | 02       |
+| 04     | 事务、WAL 与幂等    | 批次、txId、withSnapshot        | ✅   | 02       |
+| 05     | 索引选择与性能      | 六序、属性/全文/空间索引、热度  | ✅   | 02,03    |
+| 06     | 维护与治理          | CLI 组合、自动压实、GC、统计    | ✅   | 05       |
+| 07     | 存储格式与持久化    | 文件布局、manifest、WAL 细节    | 🔁   | 05       |
+| 08     | 部署与最佳实践      | 环境、备份、运维流水线          | 🔁   | 01-06    |
+| 09     | FAQ 与排错          | 常见错误、诊断流程、脚本        | 🔁   | 全部     |
+| 实战 A | 代码知识图谱        | 实战数据建模 + 查询             | ✅   | 02,03    |
+| 实战 B | 商城系统            | 事务、属性索引、运维            | ✅   | 02-06    |
+
+> ✅：推荐顺序学习；🔁：根据需求选读。
+
+## 示例数据集
+
+- 默认使用 `synapsedb bench` 生成的 `demo.synapsedb` / `workshop.synapsedb`
+- 结构包含：用户、项目、文件、依赖、指标等
+- 教程提供 `scripts/bench-standard.mjs` 生成更大规模样例
+
+## 环境准备
+
+1. 安装 Node.js ≥ 18（推荐 20/22）
+2. 安装 pnpm，并执行 `pnpm setup`
+3. 克隆仓库并执行 `pnpm install`
+4. 验证 CLI：`pnpm build && npm i -g . && synapsedb --help`
+
+## 学习方法
+
+- 每篇教程均包含：目标 → 概念 → 操作步骤 → 验证 → 常见问题 → 延伸阅读
+- 推荐边读边运行命令，使用 `docs/使用示例` 中的脚本快速搭建环境
+- 所有代码示例均为 TypeScript（ESM），可在 `tsx` 或 `vitest` 环境直接运行
+
+## 配套资源
+
+- README · [SynapseDB 总览](../../README.md)
+- 使用示例 · `docs/使用示例/README.md`
+- 知识库 · `.qoder/repowiki/zh/content/`
+- 路线图 · `docs/项目发展路线图/`
+
+## 下一步
+
+- 完成 [教程 01 · 安装与环境](教程-01-安装与环境.md)
+- 如需提前了解 CLI，可阅读 [docs/使用示例/00-全局CLI-快速开始.md](../使用示例/00-全局CLI-快速开始.md)
