--- a/docs/教学文档/教程-01-安装与环境.md
+++ b/docs/教学文档/教程-01-安装与环境.md
@@ -1,56 +1,102 @@
 # 教程 01 · 安装与环境
 
-## 环境要求
+## 目标
 
-- Node.js 18+（推荐 20+）
-- ESM 模块（本包 `package.json: { "type": "module" }`）
-- macOS/Linux/Windows 均可
+- 安装 SynapseDB 所需的运行时与依赖
+- 构建最小可运行环境并验证 CLI / API
+- 配置示例数据集供后续教程复用
 
-## 作为库使用（项目内）
+## 前置要求
 
-由于本项目暂未发布到公共 npm Registry，你可通过打包本地 tgz 的方式安装：
+- Node.js ≥ 18（推荐 20/22）
+- Git、pnpm（建议 8+，推荐 10）
+- macOS、Linux 或 Windows（PowerShell/WSL 均可）
+
+## 步骤一：克隆与依赖安装
 
 ```bash
-# 在仓库根目录打包
-pnpm build && pnpm pack
-# 生成的压缩包一般名为 synapsedb-<version>.tgz
-
-# 在你的业务项目内安装该 tgz
-npm i ./path/to/synapsedb-1.0.0.tgz
+git clone https://github.com/your-org/SynapseDB.git
+cd SynapseDB
+pnpm install
 ```
 
-在业务项目中导入并使用：
+> 安装过程涉及 TypeScript、Vitest、CLI 依赖。建议全局配置 `PNPM_HOME` 后执行 `pnpm setup`。
+
+## 步骤二：构建与全局 CLI
+
+```bash
+pnpm build                  # TypeScript -> dist/
+npm i -g .                  # 生成 synapsedb 命令（可选）
+# 或使用 pnpm：pnpm dlx npm -g install .
+
+synapsedb --help            # 验证 CLI 是否可用
+synapsedb --version
+```
+
+若暂不想全局安装，可使用本地脚本：
+
+```bash
+pnpm exec tsx src/cli/stats.ts <db>
+```
+
+## 步骤三：环境变量与目录
+
+- 默认生成数据库到当前工作目录
+- 建议创建专用存储目录：`mkdir -p ~/data/synapsedb`
+- CLI 支持相对/绝对路径；Windows 建议使用 WSL 或 PowerShell 配合 `\`
+
+## 步骤四：生成示例数据库
+
+```bash
+synapsedb bench demo.synapsedb 200 lsm
+synapsedb stats demo.synapsedb --summary
+```
+
+输出示例：
+
+```
+triples: 820
+orders.SPO.multiPagePrimaries: 1
+walBytes: 512KB
+hotness.top[0]: { primary: 42, score: 0.73 }
+```
+
+## 步骤五：Node.js 验证脚本
 
 ```ts
+// scripts/verify.ts
 import { SynapseDB } from 'synapsedb';
 
-const db = await SynapseDB.open('brain.synapsedb', {
-  enableLock: true,
-});
-db.addFact({ subject: 'A', predicate: 'knows', object: 'B' });
-await db.flush();
+const db = await SynapseDB.open('demo.synapsedb', { enableLock: true });
+const sample = await db.find({ predicate: 'FRIEND_OF' }).limit(5).all();
+console.log(sample);
 await db.close();
 ```
 
-注意：你的项目需为 ESM（`"type":"module"`），或使用打包器支持 ESM 导入。
+运行：`pnpm exec tsx scripts/verify.ts`
 
-## 全局 CLI 安装（开发者工具）
+## 步骤六：可选工具
 
-用于本地诊断/治理的命令行工具可通过 npm 全局安装当前仓库：
+- **Docker**：参阅 [教程 08 · 部署与最佳实践](教程-08-部署与最佳实践.md)
+- **VSCode**：安装 `ESLint`、`Prettier`、`Vitest` 插件，启用 `TypeScript: Enable Project Diagnostics`
+- **MCP**：如在 AI 助手环境中使用，参考 `docs/使用示例/README.md`
 
-```bash
-# 在本仓库根目录
-pnpm build
-npm i -g .
+## 常见问题
 
-synapsedb --help
-```
+| 问题                | 解决方式                                                       |
+| ------------------- | -------------------------------------------------------------- |
+| `pnpm install` 失败 | 检查 Node 版本；执行 `pnpm env use latest`；网络问题可切换镜像 |
+| `synapsedb` 未找到  | 确认 `npm i -g .` 成功并刷新 shell；或使用 `npx synapsedb`     |
+| Windows 路径异常    | 使用 WSL 或 PowerShell，路径写成 `C:/data/demo.synapsedb`      |
+| build 报错          | 清理 `node_modules`，执行 `pnpm install && pnpm build`         |
 
-常用命令：
+## 验证清单
 
-- `synapsedb bench <db> [N] [lsm]`：生成样本库并输出插入/查询耗时
-- `synapsedb stats <db>`：总体统计
-- `synapsedb auto-compact <db> [...options]`：增量/整序合并
-- `synapsedb gc <db>`：页面级 GC
-- `synapsedb check|repair <db>`：自检与修复
-- 更多见《附录-CLI 参考》
+- [ ] `synapsedb --version` 正常输出
+- [ ] `synapsedb stats demo.synapsedb` 正常
+- [ ] `pnpm exec tsx scripts/verify.ts` 能读取数据
+
+## 延伸阅读
+
+- [教程 02 · 数据模型与基础 CRUD](教程-02-数据模型与基础CRUD.md)
+- [docs/使用示例/00-全局CLI-快速开始.md](../使用示例/00-全局CLI-快速开始.md)
