--- a/docs/教学文档/教程-05-索引选择与性能.md
+++ b/docs/教学文档/教程-05-索引选择与性能.md
@@ -1,27 +1,139 @@
 # 教程 05 · 索引选择与性能优化
 
-## 六序索引与选择策略
+## 目标
 
-- 顺序：SPO/SOP/POS/PSO/OSP/OPS
-- 选择：优先覆盖前缀更长的顺序（如 s+p → SPO；p+o → POS）
+- 理解六序索引、属性索引、全文与空间索引的使用时机
+- 学会使用热点统计、自动压实与 GC 提升性能
+- 掌握常见调优手段（页大小、压缩、批处理）
 
-## 分页与页大小（pageSize）
+## 前置要求
 
-- pageSize 越大，单页吞吐更高，但内存与 I/O 粒度更粗
-- 建议 1K~2K 区间按数据分布与场景评估
+- 数据库已包含多种关系与属性
+- 熟悉查询与事务基础
 
-## 压缩
+## 六序索引
 
-- `none` / `brotli:level(1~11)`
-- 冷数据（rewrite）可用更高压缩；热主键增量重写可选低等级或不压缩
+| 顺序 | 主键格式                     | 场景                           |
+| ---- | ---------------------------- | ------------------------------ |
+| SPO  | subject → predicate → object | 最常见，subject 起始查询       |
+| SOP  | subject → object → predicate | 根据 subject + object 查找谓词 |
+| POS  | predicate → object → subject | 逆向查找某谓词的目标           |
+| PSO  | predicate → subject → object | 正向按谓词枚举 subject         |
+| OSP  | object → subject → predicate | 以 object 开头的查询           |
+| OPS  | object → predicate → subject | object + predicate 起步        |
 
-## 流式查询
+> QueryBuilder 会根据提供的字段自动选择最优顺序。
 
-- 避免一次性拉取大结果集：`streamFacts(criteria, batchSize)`
-- CLI/服务端可结合 SSE/WebSocket 渐进返回
+## 属性索引
 
-## 调优指引
+### 创建与查询
 
-- 合并模式：日常增量（incremental），定期 rewrite 提升压缩比
-- 热度阈值：结合业务访问设置 `hot-threshold`；限制 TopK `max-primary`
-- 生产建议：启用写锁 `enableLock`；尊重读者 `registerReader`
+```ts
+await db.addFact(
+  { subject: 'user:alice', predicate: 'FRIEND_OF', object: 'user:bob' },
+  {
+    edgeProperties: { strength: 0.85, tags: ['core-team'], weight: 2 },
+    subjectProperties: { age: 29, city: 'Shanghai' },
+  },
+);
+
+const strong = await db.findByNodeProperty({
+  propertyName: 'age',
+  range: { min: 25, max: 35 },
+});
+
+const tagged = await db.findByEdgeProperty({
+  propertyName: 'tags',
+  contains: 'core-team',
+});
+```
+
+- 属性索引自动维护，不需手动建索引语句
+- 支持数值范围、字符串前缀、数组包含、布尔匹配
+
+## 全文索引
+
+```ts
+import { FulltextEngine } from '@/fulltext/engine';
+const engine = await FulltextEngine.open('demo.synapsedb');
+await engine.batchIndex([
+  { id: 'doc:001', title: 'SynapseDB 指南', body: '链式联想、WAL、属性索引' },
+]);
+const hits = await engine.search({ keywords: ['链式', '索引'], limit: 5 });
+```
+
+- 详见 `docs/使用示例/全文搜索使用指南.md`
+- 支持分词、权重、过滤器
+
+## 空间索引
+
+```ts
+import { SpatialStore } from '@/spatial/spatialQuery';
+const spatial = await SpatialStore.open('demo.synapsedb');
+await spatial.insertGeometry('cluster:01', { type: 'Point', coordinates: [121.5, 31.2] });
+const nearby = await spatial.searchWithin({
+  type: 'Polygon',
+  coordinates: [
+    [
+      [121.3, 31.1],
+      [121.7, 31.1],
+      [121.7, 31.3],
+      [121.3, 31.3],
+      [121.3, 31.1],
+    ],
+  ],
+});
+```
+
+- 详见 `docs/使用示例/空间几何计算指南.md`
+
+## 热度与自动压实
+
+```bash
+synapsedb hot demo.synapsedb --top=10
+synapsedb auto-compact demo.synapsedb \
+  --mode=incremental \
+  --orders=SPO,POS \
+  --min-merge=2 \
+  --hot-threshold=1.1 \
+  --max-primary=5 \
+  --auto-gc
+```
+
+- `hotness.json` 记录半衰热度，适合作为压实优先级
+- `synapsedb auto-compact` 会尊重活跃读者，避免破坏快照
+
+## 页大小与压缩
+
+- 默认 `pageSize ≈ 1024`
+- 热主键：保持较小页，可更快 incremental
+- 冷数据：使用 rewrite + `--compression=brotli:4` 提升压缩比
+
+## 性能建议
+
+| 场景       | 建议                                               |
+| ---------- | -------------------------------------------------- |
+| 大量写入   | 使用批次 + txId，定期 `flush()`，分阶段压实        |
+| 高并发查询 | 启用属性索引、Streaming，避免长链在同一请求中执行  |
+| 内存限制   | 调整 `batchSize`、禁用不必要的聚合；使用 streaming |
+| 大型分析   | `synapsedb dump` 导出并配合外部工具处理            |
+
+## 监控指标
+
+- `synapsedb stats --summary`：页数、墓碑比例、WAL 大小
+- `synapsedb stats --txids`：事务速率与来源分布
+- `benchmarks/*`：执行 `pnpm benchmark` 输出详细性能数据
+
+## 常见问题
+
+| 现象              | 原因                           | 解决                                                         |
+| ----------------- | ------------------------------ | ------------------------------------------------------------ |
+| 查询慢            | 未命中索引、属性过滤在内存执行 | 调整查询条件、使用 `findByNodeProperty`、优化数据模型        |
+| auto-compact 跳过 | 有活跃读者                     | 等待读者结束或指定 `--respect-readers=false`（不推荐）       |
+| GC 后文件仍大     | 有 LSM 暂存或 WAL 未清理       | `synapsedb auto-compact --include-lsm-segments`，再执行 `gc` |
+
+## 延伸阅读
+
+- [docs/使用示例/05-维护治理-示例.md](../使用示例/05-维护治理-示例.md)
+- [docs/使用示例/性能基准测试指南.md](../使用示例/性能基准测试指南.md)
+- [docs/使用示例/空间几何计算指南.md](../使用示例/空间几何计算指南.md)
