--- a/docs/教学文档/教程-07-存储格式与持久化.md
+++ b/docs/教学文档/教程-07-存储格式与持久化.md
@@ -1,27 +1,135 @@
 # 教程 07 · 存储格式与持久化
 
-## 主数据文件（`<name>.synapsedb`）
+## 目标
 
-- 文件头（64B）：魔数 `SYNAPSEDB`、版本 `2`
-- 区段：`dictionary`（字典）、`triples`（主三元组）、`indexes(staging)`（暂存索引镜像）、`properties`（属性）
+- 详细了解 SynapseDB 主文件、分页索引、WAL、热度/读者/事务注册表的结构
+- 理解 manifest 更新流程、LSM-Lite 暂存与 compaction 影响
+- 掌握备份、恢复与数据检查方法
 
-## 分页索引目录（`<name>.synapsedb.pages/`）
+## 文件总览
 
-- `SPO.idxpage`/`SOP.idxpage`/...：页文件（可选择 `brotli` 压缩）
-- `index-manifest.json`：`pageSize/compression/lookups/tombstones/epoch/orphans`
-- `hotness.json`：热度计数（带半衰衰减）
-- `readers/`：读者登记文件（每进程独立 reader 文件）
-- `lsm-manifest.json`：LSM-Lite 段清单（实验），可并入并清空
+```
+<name>.synapsedb             # 主数据文件
+<name>.synapsedb.pages/      # 分页索引目录
+<name>.synapsedb.wal         # 写前日志 (Write-Ahead Log)
+```
 
-## WAL（`<name>.synapsedb.wal`）
+## 主数据文件结构
 
-- 记录 add/delete/props 及批次提交
-- 崩溃恢复时重放，遇到不完整记录按 `safeOffset` 截断
+| 区段              | 内容                                       | 说明                                 |
+| ----------------- | ------------------------------------------ | ------------------------------------ |
+| Header (64B)      | 魔数 `SYNAPSEDB`、版本号、页大小、保留字段 | 版本管理与兼容检查                   |
+| Dictionary        | 字符串 → ID 映射（VarInt 编码）            | 所有 subject/predicate/object 字面量 |
+| Triples           | 排序后的三元组，本体以六序主键拆分         | 与索引页对应                         |
+| Indexes (staging) | LSM-Lite 暂存段                            | 热主键临时写入区，后续并入分页索引   |
+| Properties        | 节点/边属性 JSON 文档，带版本号 `__v`      | 支持局部覆盖                         |
 
-## 刷盘（`db.flush()`）
+## 分页索引目录
 
-- 持久化字典/三元组/属性
-- 合并分页索引（增量/整序）并写 manifest
-- 写入热度计数（半衰处理）
-- LSM-Lite 段落盘（实验）
-- 重置 WAL
+```
+<db>.synapsedb.pages/
+  ├─ SPO.idxpage / SOP.idxpage / ...   # 各顺序索引页
+  ├─ index-manifest.json               # 页映射、epoch、tombstones、orphans
+  ├─ hotness.json                      # 主键热度统计
+  ├─ readers.json                      # 活跃读者
+  ├─ txids.json                        # 幂等事务 ID 注册表（可选）
+  └─ lsm-manifest.json                 # LSM 暂存段描述（可选）
+```
+
+### index-manifest.json
+
+```json
+{
+  "epoch": 128,
+  "pageSize": 1024,
+  "orders": {
+    "SPO": {
+      "pages": [
+        { "primary": 0, "offset": 0, "length": 1024 },
+        { "primary": 1, "offset": 1024, "length": 768 }
+      ],
+      "tombstones": 42,
+      "multiPagePrimaries": 3
+    }
+  },
+  "orphans": ["SPO/old-001.idxpage"],
+  "lsm": { "segments": [] }
+}
+```
+
+- `epoch`：每次 manifest 更新递增
+- `pages`：主键到页偏移映射
+- `tombstones`：该顺序的墓碑数量
+- `orphans`：待 GC 的旧页
+
+### hotness.json
+
+- 记录主键热度（访问/写入计数 + 半衰衰减）
+- auto-compact 根据热度决定压实优先级
+
+### readers.json
+
+- 记录活跃读者 ID、开始时间、使用的 epoch
+- `synapsedb auto-compact` 在有读者时跳过对应主键
+
+### txids.json
+
+- 持久化事务 ID 注册表
+- 字段：`txId`、`sessionId`、`committedAt`
+- 用于跨进程/重启后的幂等判断
+
+## WAL v2
+
+| 字段     | 含义                                    |
+| -------- | --------------------------------------- |
+| header   | 魔数、版本、序列号                      |
+| begin    | `BEGIN { txId, sessionId }`             |
+| write    | `ADD/DEL/PROP` 条目，包含主键与属性数据 |
+| commit   | `COMMIT { durable? }`                   |
+| abort    | `ABORT`                                 |
+| checksum | CRC32                                   |
+
+- 写入总是先落 WAL，再更新主文件/索引
+- 崩溃恢复时按顺序重放，遇到损坏即截断
+
+## Manifest 更新流程
+
+1. 写入新页 → 生成新 manifest JSON → 写入临时文件 `index-manifest.json.tmp`
+2. fsync 临时文件
+3. rename 为正式文件
+4. fsync 目录，确保原子可见
+
+## LSM-Lite 暂存
+
+- 当 `stagingMode: 'lsm-lite'` 时，热主键数据先写入段文件
+- auto-compact 可通过 `--include-lsm-segments` 并入
+- 并入后暂存段删除并记录在 manifest 中
+
+## 备份与恢复
+
+1. 执行 `synapsedb auto-compact --auto-gc` 保证干净状态
+2. 复制 `<db>.synapsedb`、`<db>.synapsedb.pages/`、`<db>.synapsedb.wal`
+3. 恢复时简单替换同名文件；首次打开自动重放 WAL
+4. 如需只读副本，开启 `registerReader: true` 并禁止写入
+
+## 检查与验证
+
+```bash
+synapsedb check demo.synapsedb --strict
+synapsedb dump demo.synapsedb SPO 0
+pnpm exec tsx scripts/dump-graph.mjs demo.synapsedb > dump.ndjson
+```
+
+## 常见问题
+
+| 现象           | 分析               | 解决                                                |
+| -------------- | ------------------ | --------------------------------------------------- |
+| manifest 缺失  | 异常中断或权限问题 | 执行 `synapsedb repair` 或 `synapsedb compact` 重建 |
+| orphans 未清理 | GC 未执行或被跳过  | `synapsedb gc` 再次执行，确保无活跃读者             |
+| WAL 校验失败   | 文件结尾损坏       | `synapsedb check --strict` 自动截断；保持备份       |
+
+## 延伸阅读
+
+- [docs/使用示例/05-维护治理-示例.md](../使用示例/05-维护治理-示例.md)
+- [docs/使用示例/06-流式查询与大结果-示例.md](../使用示例/06-流式查询与大结果-示例.md)
+- [教程 08 · 部署与最佳实践](教程-08-部署与最佳实践.md)
