--- a/docs/教学文档/教程-08-部署与最佳实践.md
+++ b/docs/教学文档/教程-08-部署与最佳实践.md
@@ -1,24 +1,110 @@
 # 教程 08 · 部署与最佳实践
 
-## 打开参数（摘要）
+## 目标
 
-- `indexDirectory`：索引目录（默认 `<db>.pages`）
-- `pageSize`：每页三元组数（推荐 1K~2K）
-- `compression`：`none | brotli:level`（冷数据更高压缩）
-- `enableLock`：生产建议开启，独占写；读者不受影响
-- `registerReader`：默认开启，运维工具尊重读者
-- `stagingMode`：`lsm-lite`（实验）
-- `enablePersistentTxDedupe`/`maxRememberTxIds`：幂等
+- 规划 SynapseDB 在开发、测试、生产环境的部署策略
+- 建立备份、监控、自动治理与滚动发布方案
+- 了解与应用栈集成的注意事项
 
-## 生产建议
+## 环境矩阵
 
-- 写锁开启；合并/GC/修复均以 dry-run 评估影响面
-- 日常以增量合并为主，定期 rewrite 提升压缩比与清理墓碑
-- 热点驱动：合理设置 `hot-threshold` 与 `max-primary`
-- 大流量写入使用批次 +（可选）`durable: true` 保证关键事务
-- 监控并关注 `walBytes/epoch/pages/orphans/hotness` 的变化趋势
+| 环境 | 特性                 | 建议配置                                                  |
+| ---- | -------------------- | --------------------------------------------------------- |
+| 开发 | 单人/小型数据集      | `enableLock: false`、频繁 flush、使用 `synapsedb bench`   |
+| 测试 | 回归/性能            | 独立数据目录、定时 auto-compact、开启 `registerReader`    |
+| 生产 | 多服务共用或边缘节点 | `enableLock: true`、落盘至 SSD、启用持久化 txId、自动备份 |
 
-## 故障注入与恢复（测试）
+## 部署流程
 
-- 崩溃注入点：`before-page-append / before-manifest-write / before-wal-reset`
-- 恢复：WAL 重放 + 尾部安全截断；必要时 repair 或 rebuildIndexes
+1. **准备目录**：`/var/lib/synapsedb/<instance>/`
+2. **创建系统用户**：`useradd --system synapsedb`
+3. **赋权**：`chown -R synapsedb:synapsedb /var/lib/synapsedb`
+4. **部署服务**：在应用中 `open()` 时指定路径，例如：
+   ```ts
+   await SynapseDB.open('/var/lib/synapsedb/core.synapsedb', {
+     enableLock: true,
+     registerReader: true,
+     enablePersistentTxDedupe: true,
+   });
+   ```
+5. **自动治理**：使用 cron / systemd timer 执行 CLI
+6. **日志与监控**：将 `synapsedb stats` 输出写入集中日志或 Prometheus exporter
+
+## Docker 示例
+
+```Dockerfile
+FROM node:20-alpine
+WORKDIR /app
+COPY package.json pnpm-lock.yaml ./
+RUN corepack enable && pnpm install --prod
+COPY dist/ ./dist/
+VOLUME /data
+ENV SYNAPSE_DB_PATH=/data/app.synapsedb
+CMD [ "node", "dist/server.js" ]
+```
+
+- 在容器启动脚本中：
+  ```ts
+  await SynapseDB.open(process.env.SYNAPSE_DB_PATH!, { enableLock: true });
+  ```
+- 挂载 `/data`，确保容器重启后数据仍在
+
+## 备份策略
+
+- **热备**：先 `db.flush()`，再 `tar` 打包三个文件（主文件、pages、wal）
+- **冷备**：停止写入服务，复制文件后恢复服务
+- **增量**：可配合 `synapsedb dump` 导出新增主键；后续会提供 WAL 截断脚本
+
+## 自动治理模板
+
+```yaml
+# systemd timer (synapsedb-autocompact.timer)
+[Timer]
+OnCalendar=hourly
+Persistent=true
+
+# systemd service (synapsedb-autocompact.service)
+[Service]
+Type=oneshot
+User=synapsedb
+ExecStart=/usr/local/bin/synapsedb auto-compact /var/lib/synapsedb/core.synapsedb \
+  --mode=incremental --hot-threshold=1.1 --max-primary=10 --auto-gc
+```
+
+## 监控指标采集
+
+- CLI 输出 JSON，可使用 `jq` 转换后推送到 Prometheus/Grafana
+- 关注指标：`triples`、`tombstones`、`walBytes`、`multiPagePrimaries`、`hotness.top`
+- 结合 `synapsedb txids --since=5` 监控写入速率
+
+## 发布与升级
+
+- 升级前执行 `synapsedb check --strict`
+- 升级流程：
+  1. 备份
+  2. 停止写入进程（若启用写锁，程序会等待）
+  3. `pnpm install && pnpm build`
+  4. 替换新版本（或 `npm i -g .`）
+  5. 启动服务并运行 `synapsedb stats`
+- 回滚：使用备份文件覆盖，并清理 `txids.json`
+
+## 安全建议
+
+- 使用专用系统用户运行服务
+- 将数据目录放置在受控文件系统（非 /tmp）
+- 重点关注 WAL 大小与权限
+- 不要将敏感信息写入属性，可使用外部密钥服务
+
+## 常见问题
+
+| 场景             | 原因                 | 解决                                    |
+| ---------------- | -------------------- | --------------------------------------- |
+| 容器重启丢数据   | 未挂载持久卷         | 使用 `docker run -v /data:/data`        |
+| 自动治理影响查询 | 读者未登记或快照过长 | 启用 `registerReader`、优化查询时间     |
+| 备份恢复后报错   | 未 flush 或 WAL 损坏 | 恢复前执行 `db.flush()`；必要时清空 WAL |
+
+## 延伸阅读
+
+- [docs/使用示例/09-嵌入式脚本与自动化-示例.md](../使用示例/09-嵌入式脚本与自动化-示例.md)
+- [docs/使用示例/性能基准测试指南.md](../使用示例/性能基准测试指南.md)
+- [教程 09 · FAQ 与排错](教程-09-FAQ与排错.md)
